[Valarmathy]: refactored code to fix alignments and Validations for all pages

--- a/src/pages/Reset/Reset.scss
+++ b/src/pages/Reset/Reset.scss
@@ -43,19 +43,17 @@ h1{
     font-weight: 400;
     letter-spacing: 0.1px;
     line-height: 1.5;
-    margin-left: 32vh;
-    margin-bottom: 5vh;
+    margin-left: -1vh;
+    margin-bottom: 8vh;
 }
 .next-container{
     display:grid;
     margin-top: -2vh;
     margin-bottom: 6vh;
 }
-.form{
-max-width: 40% !important;
-}
+
 .next-btn{
-    margin-left: 70vh;
+    margin-left: 56vh;
     float: right;
     width: 17%;
     background-color: #1a73e8;
@@ -63,12 +61,21 @@ max-width: 40% !important;
     font:200;
     margin-bottom: 10vh;
     height: 40px;
-    border-radius: .5rem;
-    border-color:none;
+    border-radius: 4px;
+    border-color:transparent;
     
     
 }
 .form-group{
-    margin-left: 7vh;
-    margin-bottom: 8vh;
+    margin-left: 10vh;
+    margin-bottom: 4vh;
+    margin-right: 10vh;
+}
+
+.reset-form{ 
+border-radius: 8px;
+border: 1px solid #dadce0;
+margin: 20px auto;
+max-width: 36%;
+position: relative;
 }
